--- a/index.html
+++ b/index.html
@@ -130,7 +130,16 @@
                 </h3>
                 <p>Professionally cultivate one-to-one customer service with robust ideas. Completely synergize resource taxing relationships via premier niche markets. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
             </article>
-                      
+
+            <article class="col-md-4 article-intro">
+                <a href="#">
+                    <img class="img-responsive img-rounded" src="holder.js/700x300" alt="">
+                </a>
+                <h3>
+                    <a href="#">Article Pere</a>
+                </h3>
+                <p>No se que posar</p>
+            </article>
         </div>
         <!-- /.row -->
 
