--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <!-- Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Superior Collaboration
+                <h1 class="page-header" style="color:red !important">Superior Collaboration
                     <small>Visualize Quality</small>
                 </h1>
                 <p>Proactively envisioned multimedia based expertise and cross-media growth strategies. Seamlessly visualize quality intellectual capital without superior collaboration and idea-sharing. Holistically pontificate installed base portals after maintainable products.</p>
