--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <img class="img-responsive img-rounded" src="holder.js/700x300" alt="">
                 </a>
                 <h3>
-                    <a href="#">Efficiently Unleash</a>
+                    <a href="#">Article  Jordi</a>
                 </h3>
                 <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
             </article>
