--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
 							<li><a href="#">Synergize</a></li>
 						</ul>
 					</li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Users <span class="caret"></span></a>
+                        <ul class="dropdown-menu" aria-labelledby="about-us">
+                            <li><a href="#">Gerardo</a></li>
+                            <li><a href="#">..</a></li>
+                            
+                        </ul>
+                    </li>
                 </ul>
 
 				<!-- Search -->
