--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="row">
             <article class="col-md-4 article-intro">
                 <a href="#">
-                    <img class="img-responsive img-rounded" src="holder.js/700x300" alt="">
+                    <img class="img-responsive img-rounded" src="https://picsum.photos/700/300" alt="">
                 </a>
                 <h3>
                     <a href="#">Article  Jordi</a>
@@ -121,7 +121,7 @@
             </article>
             <article class="col-md-4 article-intro">
                 <a href="#">
-                    <img class="img-responsive img-rounded" src="holder.js/700x300" alt="">
+                    <img class="img-responsive img-rounded" src="https://picsum.photos/700/300" alt="">
                 </a>
                 <h3>
                     <a href="#">Completely Synergize</a>
@@ -131,7 +131,7 @@
 
             <article class="col-md-4 article-intro">
                 <a href="#">
-                    <img class="img-responsive img-rounded" src="holder.js/700x300" alt="">
+                    <img class="img-responsive img-rounded" src="https://picsum.photos/700/300" alt="">
                 </a>
                 <h3>
                     <a href="#">Dynamically Procrastinate</a>
@@ -141,7 +141,7 @@
 
             <article class="col-md-4 article-intro">
                 <a href="#">
-                    <img class="img-responsive img-rounded" src="holder.js/700x300" alt="">
+                    <img class="img-responsive img-rounded" src="https://picsum.photos/700/300" alt="">
                 </a>
                 <h3>
                     <a href="#">Article Pere</a>
