--- a/index.html
+++ b/index.html
@@ -157,6 +157,18 @@
                 </h3>
                 <p>Aquest és el text de la seccio1</p>
             </article>
+            
+            <article class="col-md-4 article-intro holamon">
+                    <a href="lavidamillor.cat">
+                        <img class="img-responsive img-rounded" src="https://picsum.photos/700/300" alt="">
+                    </a>
+                    <h2>
+                        <a href="conflice.cat">Article Conflicte Jordi</a>
+                    </h2>
+                    <p>Genial gràciesr</p>
+                </article>
+
+            ~.^ Final dels articles ^.~ 
         </div>
         <!-- /.row -->
 
