Nova seccio gerard

--- a/index.html
+++ b/index.html
@@ -157,6 +157,15 @@
                 </h3>
                 <p>Aquest és el text de la seccio1</p>
             </article>
+            <article class="col-md-4 article-intro">
+                <a href="#">
+                    <img class="img-responsive img-rounded" src="https://picsum.photos/700/300" alt="">
+                </a>
+                <h3>
+                    <a href="#">Article Seccio3</a>
+                </h3>
+                <p>Aquest és el text de la seccio3 GERARD</p>
+            </article>
         </div>
         <!-- /.row -->
 
