--- a/index.html
+++ b/index.html
@@ -167,6 +167,16 @@
                     </h2>
                     <p>Genial gràciesr</p>
                 </article>
+            
+            <article class="col-md-4 article-intro holamon">
+                    <a href="lavidamillor.cat">
+                        <img class="img-responsive img-rounded" src="https://picsum.photos/700/300" alt="">
+                    </a>
+                    <h2>
+                        <a href="conflice.cat">Article Conflicte Bob</a>
+                    </h2>
+                    <p>Genial gràciesr</p>
+                </article>
 
             ~.^ Final dels articles ^.~ 
         </div>
