--- a/index.html
+++ b/index.html
@@ -157,7 +157,6 @@
                 </h3>
                 <p>Aquest és el text de la seccio1</p>
             </article>
-<<<<<<< HEAD
             
             <article class="col-md-4 article-intro holamon">
                     <a href="lavidamillor.cat">
@@ -170,7 +169,6 @@
                 </article>
 
             ~.^ Final dels articles ^.~ 
-=======
             <article class="col-md-4 article-intro">
                 <a href="#">
                     <img class="img-responsive img-rounded" src="https://picsum.photos/700/300?random=1" alt="">
@@ -191,7 +189,6 @@
                 </h3>
                 <p>Aquest és el text de la seccio3</p>
             </article>
->>>>>>> develop
         </div>
         <!-- /.row -->
 
@@ -243,7 +240,7 @@
 	
 	<!-- Placeholder Images -->
 	<script src="js/holder.min.js"></script>
-	
+    canvi commit 1
 </body>
 
 </html>
