--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
 	<!-- Placeholder Images -->
 	<script src="js/holder.min.js"></script>
     canvi commit 1
+    canvi commit 2
 </body>
 
 </html>
