--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <img class="img-responsive img-rounded" src="https://picsum.photos/700/300" alt="">
                 </a>
                 <h3>
-                    <a href="#">Dynamically Procrastinate JAJAJJAJJAJAJJAJAJAJAJ</a>
+                    <a href="#">Dynamically Procrastinate JIJIJIJIJIJIJIJIJIJJIIJJIJIJI</a>
                 </h3>
                 <p>Professionally cultivate one-to-one customer service with robust ideas. Completely synergize resource taxing relationships via premier niche markets. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
             </article>
