--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Users <span class="caret"></span></a>
                         <ul class="dropdown-menu" aria-labelledby="about-us">
-                            <li><a href="#">Gerardo</a></li>
+                            <li><a href="gerardo.html">Gerardo</a></li>
                             <li><a href="#">..</a></li>
                             
                         </ul>
