canvi a develop, afegint article secció 6

--- a/index.html
+++ b/index.html
@@ -167,7 +167,15 @@
                     </h2>
                     <p>Genial gràciesr</p>
                 </article>
-
+            <article class="col-md-4 article-intro">
+                <a href="#">
+                    <img class="img-responsive img-rounded" src="https://picsum.photos/700/300" alt="">
+                </a>
+                <h3>
+                    <a href="#">Article Seccio6</a>
+                </h3>
+                <p>Aquest és el text de la seccio6</p>
+            </article>
             ~.^ Final dels articles ^.~ 
         </div>
         <!-- /.row -->
